--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Corre, Salta y Esquiva Objetos</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Run, Jump and Avoid Objects</title>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
   <style>
     body {
       margin: 0;
       padding: 0;
+      overflow: hidden;
     }
   </style>
 </head>
@@ -35,93 +36,112 @@
   const game = new Phaser.Game(config);
 
   function preload() {
-    this.load.image('background', 'assets/background.png');
-    this.load.image('ground', 'assets/ground.png');
-    this.load.image('obstacle', 'assets/obstacle.png');
-    this.load.image('hole', 'assets/hole.png');
-    this.load.spritesheet('player', 'assets/player.png', { frameWidth: 32, frameHeight: 48 });
+    this.load.image('background', 'assets/game/background.png');
+    this.load.image('ground', 'assets/game/ground.png');
+    this.load.image('obstacle', 'assets/game/obstacle.png');
+    this.load.image('hole', 'assets/game/hole.png');
+    this.load.spritesheet('player', 'assets/game/player.png', { frameWidth: 50, frameHeight: 50 });
   }
 
   function create() {
-    this.add.image(400, 300, 'background');
+    // Ajustar el viewport
+    const width = this.scale.width;
+    const height = this.scale.height;
+    const centerX = width / 2;
+    const centerY = height / 2;
 
+    this.cameras.main.setViewport(0, 0, width, height);
+    this.cameras.main.setBackgroundColor('#cccccc');
+
+    // Agregar el fondo y el suelo
+    this.add.image(centerX, centerY, 'background');
     this.platforms = this.physics.add.staticGroup();
+    this.platforms.create(centerX, height - 25, 'ground').setScale(2).refreshBody();
 
-    this.platforms.create(400, 568, 'ground').setScale(2).refreshBody();
-
+    // Agregar al jugador
     this.player = this.physics.add.sprite(100, 450, 'player');
     this.player.setBounce(0.2);
     this.player.setCollideWorldBounds(true);
 
+    // Animaciones del jugador
     this.anims.create({
-      key: 'left',
-      frames: this.anims.generateFrameNumbers('player', { start: 0, end: 3 }),
-      frameRate: 10,
+      key: 'run',
+      frames: this.anims.generateFrameNumbers('player', { start: 0, end: 7 }),
+      frameRate: 15,
       repeat: -1
     });
 
     this.anims.create({
-      key: 'turn',
-      frames: [ { key: 'player', frame: 4 } ],
-      frameRate: 20
+      key: 'jump',
+      frames: [ { key: 'player', frame: 8 } ],
+      frameRate: 10
     });
 
-    this.anims.create({
-      key: 'right',
-      frames: this.anims.generateFrameNumbers('player', { start: 5, end: 8 }),
-      frameRate: 10,
-      repeat: -1
-    });
-
+    // Controles del jugador
     this.cursors = this.input.keyboard.createCursorKeys();
 
-    this.obstacles = this.physics.add.group();
-    this.holes = this.physics.add.group();
+    // Obstáculos y hoyos
+    this.obstacles = this.physics.add.group({
+      immovable: true,
+      allowGravity: false
+    });
 
+    this.holes = this.physics.add.group({
+      immovable: true,
+      allowGravity: false
+    });
+
+    // Puntuación
     this.score = 0;
-    this.scoreText = this.add.text(16, 16, 'Puntuación: 0', { fontSize: '32px', fill: '#000' });
+    this.scoreText = this.add.text(16, 16, 'Score: 0', { fontSize: '32px', fill: '#000' });
 
+    // Eventos de aparición de obstáculos y hoyos
     this.time.addEvent({ delay: 2000, callback: this.addObstacle, callbackScope: this, loop: true });
     this.time.addEvent({ delay: 3000, callback: this.addHole, callbackScope: this, loop: true });
 
+    // Colisiones
     this.physics.add.collider(this.player, this.platforms);
     this.physics.add.collider(this.obstacles, this.platforms);
     this.physics.add.collider(this.holes, this.platforms);
 
     this.physics.add.overlap(this.player, this.obstacles, this.hitObstacle, null, this);
-    this.physics.add.overlap(this.player, this.holes, this.hitHole, null, this);
+    this.physics.add.overlap(this.player, this.holes, this.collectHole, null, this);
   }
 
   function update() {
+    // Movimiento del jugador
     if (this.cursors.left.isDown) {
-      this.player.setVelocityX(-160);
-      this.player.anims.play('left', true);
+      this.player.setVelocityX(-200);
+      this.player.flipX = true;
+      this.player.anims.play('run', true);
     }
     else if (this.cursors.right.isDown) {
-      this.player.setVelocityX(160);
-      this.player.anims.play('right', true);
+      this.player.setVelocityX(200);
+      this.player.flipX = false;
+      this.player.anims.play('run', true);
     }
     else {
       this.player.setVelocityX(0);
-      this.player.anims.play('turn');
+      this.player.anims.play('jump');
     }
 
+    // Salto del jugador
     if (this.cursors.up.isDown && this.player.body.touching.down) {
       this.player.setVelocityY(-650);
     }
   }
 
   function addObstacle() {
-    const x = 800;
-    const y = Phaser.Math.Between(400, 550);
+    const x = this.scale.width + 50;
+    const y = this.scale.height - 75;
 
     const obstacle = this.obstacles.create(x, y, 'obstacle');
     obstacle.setVelocityX(-200);
   }
 
   function addHole() {
-    const x = 800;
-    const y = 568;
+    const x = this.scale.width + 50;
+    const y = this.scale.height - 75;
 
     const hole = this.holes.create(x, y, 'hole');
     hole.setVelocityX(-200);
@@ -132,24 +152,25 @@
 
     this.player.setTint(0xff0000);
 
-    this.player.anims.play('turn');
+    this.player.anims.play('jump');
 
-    const gameOverText = this.add.text(200, 250, '¡GAME OVER!', { fontSize: '64px', fill: '#000' });
+    const gameOverText = this.add.text(this.scale.width / 2, this.scale.height / 2, 'Game Over', { fontSize: '64px', fill: '#000' });
+    gameOverText.setOrigin(0.5);
 
     this.time.addEvent({ delay: 2000, callback: () => {
       this.scene.restart();
       this.score = 0;
-      this.scoreText.setText('Puntuación: 0');
+      this.scoreText.setText('Score: 0');
       this.physics.resume();
       this.player.clearTint();
       gameOverText.destroy();
     }, callbackScope: this, loop: false });
   }
 
-  function hitHole(player, hole) {
+  function collectHole(player, hole) {
     hole.disableBody(true, true);
     this.score += 10;
-    this.scoreText.setText('Puntuación: ' + this.score);
+    this.scoreText.setText('Score: ' + this.score);
   }
 </script>
 
